			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Call stack-shifter when low on stack in built-in sort/1.
    Only applies to systems where mmap() doesn't work or isn't detected
    properly. Richard O'Keefe.  

  * FIXED: Bug#29: PLWIN.EXE console scrinks one row each invocation.
    Holger Kanwischer.

  * ADDED: PLWIN.EXE: make tty_size/2 return the window size in rows and
    columns.

  * FIXED: Bug#30: calling halt/0 and friends from `sub-threads' now causes
    a permission error.  This isn't perfect, but better than an uncontrolled
    crash.  Joachim Katzer.

  * PORT: Fixed various problems on SGI (IRIX 6.5), including realisation
    of dynamic stacks based on MAP_AUTOGROW|MAP_AUTORESRV.  Thanks to
    Matthijs Mourits for providing me with access to his machine.

  * FIXED: only open /dev/zero once in multi-threaded version where
    MAP_ANON is not supported.


VERSION 5.1.9 (Mar 06, 2003)
============================

  * ENHANCED: Check for instantiation errors in send_list/[2,3].  Anjo
    Anjewierden.

  * ENHANCED: Use a key	to speedup searching for potentionally matching
    messages in long message queues.

  * FIXED: Bug#28: race condition on message queues.  Mike Elston.  Added
    abstracted version of his test to the thread test-suite.

  * FIXED: Error-reporting in thread_join/2.  Added check to avoid joining
    detached threads.

  * PORT: Added #define _GNU_SOURCE 1 into pl-thread.c to compile without
    warnings on glibc based systems.

  * FIXED: error handling if alias(Alias) option is used in thread_create/3
    with an already used thread or queue name.  Part of Bug#28, Mike Elston.

  * MODIFIED: succ/2 now only handles natural (>= 0) numbers.  Compatibility.